# secpass

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  flake.nix  secpass.db
src/: db.rs  main.rs  mfa.rs  passwd.rs  product.rs  user.rs
utils/: default.nix  install.sh
